[gd_scene load_steps=4 format=3 uid="uid://f73ynbaimcwh"]

[ext_resource type="Script" uid="uid://cvog20tddbehw" path="res://obsticle.gd" id="1_8hjg8"]
[ext_resource type="Texture2D" uid="uid://cey2si7e5y02u" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/Free_Chicken_House.png" id="3_owy4p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8hjg8"]
size = Vector3(0.1, 0.1, 0.1)

[node name="obsticle" type="StaticBody3D"]
collision_layer = 4
script = ExtResource("1_8hjg8")
drop_range_min = 0.05
drop_range_max = 0.1
arc_height_min = 0.05
arc_height_max = 0.1

[node name="Sprite3D" type="Sprite3D" parent="."]
offset = Vector2(0, 18)
billboard = 1
texture_filter = 0
texture = ExtResource("3_owy4p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0417057, 0)
shape = SubResource("BoxShape3D_8hjg8")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 129

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0417057, 0)
shape = SubResource("BoxShape3D_8hjg8")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
